# chrysalis

./: LICENSE  README.md  README_quickstart.md  requirements.txt  utils.py
models/: DummyModel.py  GammaModel.py  Model.py  iNASModel.py
models/components/: Component.py  __init__.py
models/components/eh/: DummyEH.py  EH.py
models/components/eh/cap/: Capacitor.py  DummyCap.py
models/components/eh/eher/: DummySolar.py  (+1 more)
models/components/insitu/: DummyInsitu.py  GammaInsitu.py  INASInsitu.py  Insitu.py
models/components/insitu/GammaCostCore/cost_model/maestro_source/: CMakeLists.txt  maestro-top.cpp  run_example.sh
models/components/insitu/GammaCostCore/cost_model/maestro_source/cost-model/include/base/: BASE_constants.hpp
models/components/insitu/GammaCostCore/cost_model/maestro_source/cost-model/include/cost-analysis/: CA_cost-analysis-engine.hpp  CA_iterations.hpp  CA_reuse-analysis.hpp
models/components/insitu/GammaCostCore/cost_model/maestro_source/cost-model/include/dataflow-analysis/: DFA_cluster-analysis.hpp  DFA_cluster-unit.hpp  DFA_directive-table.hpp  DFA_directives.hpp  DFA_iteration-analysis.hpp  DFA_iteration-status.hpp
models/components/insitu/GammaCostCore/cost_model/maestro_source/cost-model/include/dataflow-specification-language/: DFSL_parser.hpp  DFSL_syntax_tokens.hpp
models/components/insitu/GammaCostCore/cost_model/maestro_source/data/hw/: accelerator_1.m
models/components/insitu/GammaCostCore/cost_model/maestro_source/data/mapping/: Resnet50_kcp_ws_layer1.m  Resnet50_kcp_ws_layer2.m
models/components/insitu/GammaCostCore/cost_model/maestro_source/tools/frontend/keras-example/: my_model.py
observe/: test_curve.py  test_curve_gamma.py
search/: __init__.py  alexnet_tpu_accel_sp_0.0001_0.003_cap_1e-06_0.01_envir_20_40_pe_1_64_cache_1024_16384_step_50.db  alexnet_tpu_accel_sp_0.0001_0.003_cap_1e-06_0.01_envir_20_40_pe_1_64_cache_1024_16384_step_50.html  cifar_sp_0.0001_0.003_cap_1e-06_0.01_envir_20_40_step_50.html  engineA.py  engineA.yaml  engineA.yaml_sp_1e-4_30e-4_cap_1e-6_1e-2_envir_20_40.db  engineB.py  engineB.yaml  kws_sp_0.0001_0.003_cap_1e-06_0.01_envir_20_40_step_50.db  kws_sp_0.0001_0.003_cap_1e-06_0.01_envir_20_40_step_50.html  simple_sp_0.0001_0.003_cap_1e-06_0.01_envir_20_40_step_50.db  throughput.py
search/figure_generation/figure10/: engine-EA.yaml  engine-IA.yaml  engine-onlyCache.yaml  engine-onlyCap.yaml  engine-onlyPE.yaml  engine-onlySP.yaml
search/figure_generation/figure8/: cifar-1.html  cifar.csv  engine-cifar.yaml  engine-har.yaml  engine-kws.yaml  engine-simple.yaml  engine.py  engine.yaml  figure8-example-1.html  figure8-example-2.html  har-1.html  har-2.html  har.csv  kws-1.html  kws.csv  simple-1.html  simple-2.html  simple_sp_0.0003_0.0003_cap_0.001_0.001_envir_20_40_step_50.db  simple_sp_0.0003_0.0003_cap_0.001_0.001_envir_20_40_step_50.html  simple_sp_0.0006_0.0006_cap_0.001_0.001_envir_20_40_step_50.db  simple_sp_0.0006_0.0006_cap_0.001_0.001_envir_20_40_step_50.html  simple_sp_0.0009_0.0009_cap_0.001_0.001_envir_20_40_step_50.db  simple_sp_0.0009_0.0009_cap_0.001_0.001_envir_20_40_step_50.html  simple_sp_0.0012_0.0012_cap_0.001_0.001_envir_20_40_step_50.db  simple_sp_0.0012_0.0012_cap_0.001_0.001_envir_20_40_step_50.html  simple_sp_0.0014999999999999998_0.0014999999999999998_cap_0.001_0.001_envir_20_40_step_50.db  simple_sp_0.0014999999999999998_0.0014999999999999998_cap_0.001_0.001_envir_20_40_step_50.html  simple_sp_0.0017999999999999997_0.0017999999999999997_cap_0.001_0.001_envir_20_40_step_50.db  simple_sp_0.0017999999999999997_0.0017999999999999997_cap_0.001_0.001_envir_20_40_step_50.html  simple_sp_0.0021_0.0021_cap_0.001_0.001_envir_20_40_step_50.db  simple_sp_0.0021_0.0021_cap_0.001_0.001_envir_20_40_step_50.html  simple_sp_0.0024_0.0024_cap_0.001_0.001_envir_20_40_step_50.db  simple_sp_0.0024_0.0024_cap_0.001_0.001_envir_20_40_step_50.html  simple_sp_0.0026999999999999997_0.0026999999999999997_cap_0.001_0.001_envir_20_40_step_50.db  simple_sp_0.0026999999999999997_0.0026999999999999997_cap_0.001_0.001_envir_20_40_step_50.html  simple_sp_0.0029999999999999996_0.0029999999999999996_cap_0.001_0.001_envir_20_40_step_50.db  simple_sp_0.0029999999999999996_0.0029999999999999996_cap_0.001_0.001_envir_20_40_step_50.html
search/figure_generation/figure9/: cifar-1.html  engine-cifar.yaml  engine-har.yaml  engine-kws.yaml  engine-simple.yaml  engine.py  engine.yaml  figure9-example-1.html  figure9-example-2.html  har-2.html  kws-1.html  kws.csv  simple-1.html  simple.csv  simple_sp_0.0003_0.003_cap_0.000125_0.000125_envir_20_40_step_50.db  simple_sp_0.0003_0.003_cap_0.000125_0.000125_envir_20_40_step_50.html  simple_sp_0.0003_0.003_cap_0.000625_0.000625_envir_20_40_step_50.db  simple_sp_0.0003_0.003_cap_0.000625_0.000625_envir_20_40_step_50.html  simple_sp_0.0003_0.003_cap_0.003125_0.003125_envir_20_40_step_50.db  simple_sp_0.0003_0.003_cap_0.003125_0.003125_envir_20_40_step_50.html  simple_sp_0.0003_0.003_cap_0.015625_0.015625_envir_20_40_step_50.db  simple_sp_0.0003_0.003_cap_0.015625_0.015625_envir_20_40_step_50.html  simple_sp_0.0003_0.003_cap_1e-06_1e-06_envir_20_40_step_50.db  simple_sp_0.0003_0.003_cap_1e-06_1e-06_envir_20_40_step_50.html  simple_sp_0.0003_0.003_cap_2.4999999999999998e-05_2.4999999999999998e-05_envir_20_40_step_50.db  simple_sp_0.0003_0.003_cap_2.4999999999999998e-05_2.4999999999999998e-05_envir_20_40_step_50.html  simple_sp_0.0003_0.003_cap_4.9999999999999996e-06_4.9999999999999996e-06_envir_20_40_step_50.db  simple_sp_0.0003_0.003_cap_4.9999999999999996e-06_4.9999999999999996e-06_envir_20_40_step_50.html  temp-plot.html
search/result_examples/engineA/: cifar_sp_0.0001_0.003_cap_1e-06_0.01_envir_20_40_step_50.db  har_sp_0.0001_0.003_cap_1e-06_0.01_envir_20_40_step_50.db  har_sp_0.0001_0.003_cap_1e-06_0.01_envir_20_40_step_50.html  simple_sp_0.0001_0.003_cap_1e-06_0.01_envir_20_40_step_50.html
search/result_examples/figure8/: cifar-2.html  kws-2.html  simple.csv
search/result_examples/figure9/: cifar-2.html  cifar.csv  har-1.html  har.csv  kws-2.html  simple-2.html
(+24 files in other folders)
